Make a layout interface and crudely split the sheet calculation into detection and layout